fix for textarea scrollbar on OSX
git-svn-id: http://www.geoext.org/svn/geoext/extensions/geoext.ux/ux/PrintPreview@2037 5b3c568a-86f9-4a59-a47a-7be284f604b4

--- a/resources/css/printpreview.css
+++ b/resources/css/printpreview.css
@@ -6,6 +6,11 @@
     padding: 5px 0 5px 0;
 }
 
+/* fixes textarea scrollbar issue in FF on OSX */
+.gx-printpreview  textarea.x-form-field {
+    padding: 1px 1px 1px 3px;
+}
+
 .gx-map-overlay {
     z-index: 1000; 
     position: absolute; 
